tests/snapshots/integration__integration_tests__merge__docs_merge_squash_llm.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_COMMIT__GENERATION__COMMAND: "cat >/dev/null && echo 'feat(auth): Implement JWT authentication system\n\nAdd comprehensive JWT token handling including validation, refresh\nlogic, and authentication tests.'"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_DIRECTIVE_CD_FILE: "[DIRECTIVE_CD_FILE]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_MOCK_CONFIG_DIR: "[TEST_MOCK_CONFIG]"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36m◎[39m [36mSquashing 3 commits into a single commit [90m(5 files, [32m+16[39m[39m[90m)[39m...[39m
[36m◎[39m [36mGenerating squash commit message...[39m
[107m [0m [1mfeat(auth): Implement JWT authentication system[22m
[107m [0m 
[107m [0m Add comprehensive JWT token handling including validation, refresh
[107m [0m logic, and authentication tests.
[32m✓[39m [32mSquashed @ [HASH][39m
[36m◎[39m [36mMerging 1 commit to [1mmain[22m @ [2m[HASH][22m (no rebase needed)[39m
[107m [0m * [33m[HASH][m feat(auth): Implement JWT authentication system
[107m [0m  auth.rs             | 2 [32m++[m
[107m [0m  auth_test.rs        | 2 [32m++[m
[107m [0m  integration_test.rs | 6 [32m++++++[m
[107m [0m  jwt.rs              | 3 [32m+++[m
[107m [0m  jwt_test.rs         | 3 [32m+++[m
[107m [0m  5 files changed, 16 insertions(+)
[32m✓[39m [32mMerged to [1mmain[22m [90m(1 commit, 5 files, [32m+16[39m[39m[90m)[39m[39m
[36m◎[39m [36mRemoving [1mfeature[22m worktree & branch in background (same commit as [1mmain[22m,[39m [2m_[22m[36m)[39m
[2m○[22m Switched to worktree for [1mmain[22m @ [1m_REPO_[22m
[0m
